--- a/templates/pom.mustache
+++ b/templates/pom.mustache
@@ -204,6 +204,7 @@
                 <configuration>
                     <stylesheet>java</stylesheet>
                     <doclint>none</doclint>
+                    <source>8</source>
                 </configuration>
             </plugin>
             <plugin>
